src/app/globals.css
/* @tailwind base;
@tailwind components;
@tailwind utilities; */
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

:root {
    --foreground-rgb: 0, 0, 0;
    --background-start-rgb: 214, 219, 220;
    --background-end-rgb: 255, 255, 255;
    --text-color: 255, 255, 255;
    /* HEX */
    /* --sandy-brown: #fc9f5bff;
    --light-coral: #ed7b84ff;
    --vista-blue: #72a1e5ff;
    --tropical-indigo: #9883e5ff;
    --tea-green: #c4f4c7ff;
    --chocolate-cosmos: #4c212aff;
    --light-coral: #ed7b84ff;
    --caribbean-current: #0d5c63ff;
    --mint: #5fbb97ff;
    --sunset: #f2d0a4ff;
    --ecru: #a69658ff;
    --light-coral: #ed7b84ff;
    --ecru-2: #d9b26fff;
    --jasmine: #fadf7fff;
    --vanilla: #f2e29fff; */
    /* RGB */
    /* --tropical-indigo: #9883e5ff;
    --caribbean-current: #0d5c63ff; */
    --h-sandy-brown: #fc9f5bff;
    --h-light-coral: #ed7b84ff;
    --h-vista-blue: #72a1e5ff;
    --h-tropical-indigo: #9883e5ff;
    --h-tea-green: #c4f4c7ff;
    --h-chocolate-cosmos: #4c212aff;
    --h-light-coral: #ed7b84ff;
    --h-caribbean-current: #0d5c63ff;
    --h-mint: #5fbb97ff;
    /* --h-mint-lowop: #4ce6ab3b; */
    --h-sunset: #f2d0a4ff;
    --h-ecru: #a69658ff;
    /* --blue-gray: #3e3f46; */
    --h-light-coral: #ed7b84ff;
    --h-ecru-2: #d9b26fff;
    --h-jasmine: #fadf7fff;
    --h-vanilla: #f2e29fff;
    --gray: 249 250 251;
    --black: 0, 0, 0;


    --sandy-brown: 252, 159, 91;
    --light-coral: 237, 123, 132;
    --vista-blue: 114, 161, 229;
    --tropical-indigo: 152, 131, 229;
    --tea-green: 196, 244, 199;
    --chocolate-cosmos: 76, 33, 42;
    --light-coral: 237, 123, 132;
    --caribbean-current: 13, 92, 99;
    --mint: 95, 187, 151;
    --sunset: 242, 208, 164;
    --ecru: 166, 150, 88;
    --light-coral: 237, 123, 132;
    --ecru-2: 217, 178, 111;
    --jasmine: 250, 223, 127;
    --vanilla: 242, 226, 159;
    --lavendar: 126, 63, 143;
    --black-olive: 55, 57, 46;
    --ultra-violet: 78, 65, 135;
    --raspberry-rose: 170, 68, 101;
    --dark-green: 23, 48, 28;
    /* --other-cc: rgb(40, 157, 168); */
    --other-cc: 40, 157, 168;
    --dark-coral: 149, 61, 69;
}

@media (prefers-color-scheme: dark) {
    :root {
        --foreground-rgb: 255, 255, 255;
        --background-start-rgb: 0, 0, 0;
        --background-end-rgb: 0, 0, 0;
    }
}

html {
    background: linear-gradient(to bottom,
            transparent,
            rgb(var(--caribbean-current))) rgb(var(--other-cc));
}

body {
    color: rgb(var(--text-color));
    /* background: linear-gradient(to bottom,
            transparent,
            rgb(var(--caribbean-current))) rgb(var(--other-cc)); */
}

@layer utilities {
    .text-sandy-brown {
        color: rgb(var(--sandy-brown));
    }

    .text-light-coral {
        color: rgb(var(--light-coral));
    }

    .text-vista-blue {
        color: rgb(var(--vista-blue));
    }

    .text-tropical-indigo {
        color: rgb(var(--tropical-indigo));
    }

    .text-tea-green {
        color: rgb(var(--tea-green));
    }

    .text-chocolate-cosmos {
        color: rgb(var(--chocolate-cosmos));
    }

    .text-caribbean-current {
        color: rgb(var(--caribbean-current));
    }

    .text-mint {
        color: rgb(var(--mint));
    }

    .text-sunset {
        color: rgb(var(--sunset));
    }

    .text-ecru {
        color: rgb(var(--ecru));
    }

    .text-ecru-2 {
        color: rgb(var(--ecru-2));
    }

    .text-jasmine {
        color: rgb(var(--jasmine));
    }

    .text-vanilla {
        color: rgb(var(--vanilla));
    }

    .text-lavendar {
        color: rgb(var(--lavendar));
    }

    .text-black-olive {
        color: rgb(var(--black-olive));
    }

    .text-ultra-violet {
        color: rgb(var(--ultra-violet));
    }

    .text-raspberry-rose {
        color: rgb(var(--raspberry-rose));
    }

    .text-dark-green {
        color: rgb(var(--dark-green));
    }

    .text-other-cc {
        color: rgb(var(--other-cc));
    }

    .text-dark-coral {
        color: rgb(var(--dark-coral));
    }

    .text-black {
        color: rgb(var(--black));
    }

    .text-gray {
        color: rgb(var(--gray));
    }

    .text-balance {
        text-wrap: balance;
    }

    @keyframes custom-spin {
        0% {
            transform: rotate(0deg);
        }
        100% {
            transform: rotate(360deg);
        }
    }

    .animate-custom-spin {
        animation: custom-spin 1s linear infinite;
    }
}

